[package]
name = "dyspxkrypt-libuefi"
description = "Raw bindings of UEFI that conforms to the definitions of the UEFI Specification."
categories = ["external-ffi-bindings", "no-std"]
keywords = ["efi", "uefi"]
version = "0.5.0"
edition = "2021"
authors = ["HTGAzureX1212."]
readme = "README.md"
license = "GPL-3.0-only"
documentation = "https://docs.rs/dyspxkrypt-libuefi"
repository = "https://github.com/dyspxkrypt-os/dyspxkrypt-libuefi/"

[dependencies]

[features]
default = []
full = ["console-full", "dev-path-full", "image-full", "media-full", "partition", "pci-full", "scsi-full"]

console-full = ["console", "console-gop", "console-pointer", "console-serial-v1p1"]
console = []
console-gop = []
console-serial = []
console-serial-v1p1 = ["console-serial"]
console-pointer = []

dev-path-full = []

image-full = ["image", "image-dev-path"]
image = []
image-dev-path = []

media-full = [
    "media-ata",
    "media-block-2",
    "media-block-v3",
    "media-crypt",
    "media-crypt-aes-cbc",
    "media-crypt-aes-xts",
    "media-disk",
    "media-disk-2",
    "media-erase",
    "media-file-v2",
    "media-fs",
    "media-nvdimm",
    "media-nvme",
    "media-partition",
    "media-ramdisk",
    "media-sd-mmc",
    "media-storesec",
    "media-tape",
    "media-ufs",
]
media-ata = []
media-block = []
media-block-2 = ["media-block"]
media-block-v2 = ["media-block"]
media-block-v3 = ["media-block-v2"]
media-crypt = ["media-block"]
media-crypt-aes-cbc = []
media-crypt-aes-xts =[]
media-disk = []
media-disk-2 = []
media-erase = ["media-block"]
media-file = []
media-file-v2 = ["media-file"]
media-fs = ["media-file-v2"]
media-nvdimm = []
media-nvme = []
media-partition = ["partition"]
media-ramdisk = []
media-sd-mmc = []
media-storesec = []
media-tape = []
media-ufs = []

partition = ["media-block"]

pci-full = ["pci-io", "pci-rbio"]
pci-io = []
pci-rbio = []

scsi-full = ["scsi-io", "scsi-passthru"]
scsi-io = []
scsi-passthru = []

[package.metadata.docs.rs]
all-features = true
